--- a/packages/kyt-cli/package.json
+++ b/packages/kyt-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kyt-cli",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.b92c3c7a",
   "description": "CLI for setting up kyt projects.",
   "main": "index.js",
   "bin": {
@@ -14,7 +14,7 @@
   "dependencies": {
     "commander": "2.19.0",
     "inquirer": "6.2.1",
-    "kyt-utils": "0.1.1",
+    "kyt-utils": "0.2.0-alpha.b92c3c7a",
     "lodash.uniq": "4.5.0",
     "semver": "5.6.0",
     "shelljs": "0.8.3",
