--- a/packages/kyt-core/package.json
+++ b/packages/kyt-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kyt",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-alpha.b92c3c7a",
   "description": "kyt is a toolkit that encapsulates and manages the configuration for web apps.",
   "author": "NYTimes",
   "license": "Apache-2.0",
@@ -19,7 +19,7 @@
     "autoprefixer": "9.4.7",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
-    "babel-preset-kyt-core": "1.0.0-alpha.0",
+    "babel-preset-kyt-core": "1.0.0-alpha.b92c3c7a",
     "chokidar": "2.0.4",
     "commander": "2.19.0",
     "connect-history-api-fallback": "1.6.0",
@@ -28,12 +28,11 @@
     "detect-port": "1.3.0",
     "eslint": "5.12.1",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-config-kyt": "1.0.0-alpha.2",
+    "eslint-config-kyt": "1.0.0-alpha.b92c3c7a",
     "eslint-config-prettier": "4.0.0",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-json": "1.3.2",
     "eslint-plugin-jsx-a11y": "6.2.0",
-    "eslint-plugin-kyt": "1.0.0-alpha.0",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
     "express": "4.16.4",
@@ -46,7 +45,7 @@
     "inquirer": "6.2.1",
     "install": "0.12.2",
     "jest": "24.0.0",
-    "kyt-utils": "0.1.1",
+    "kyt-utils": "0.2.0-alpha.b92c3c7a",
     "lodash.clonedeep": "4.5.0",
     "lodash.merge": "4.6.1",
     "lodash.once": "4.1.1",
@@ -61,19 +60,19 @@
     "strip-ansi": "5.0.0",
     "style-loader": "0.23.1",
     "stylelint": "9.10.1",
-    "stylelint-config-kyt": "1.0.0-alpha.2",
+    "stylelint-config-kyt": "1.0.0-alpha.b92c3c7a",
     "stylelint-config-standard": "18.2.0",
     "temp": "0.9.0",
     "url-loader": "0.5.8",
     "webpack": "3.12.0",
-    "webpackbar": "3.1.5",
     "webpack-assets-manifest": "1.0.0",
     "webpack-dev-middleware": "2.0.6",
     "webpack-dev-server": "2.11.3",
     "webpack-hot-middleware": "2.24.3",
     "webpack-merge": "4.1.5",
     "webpack-node-externals": "1.7.2",
-    "webpack-plugin-hash-output": "1.3.1"
+    "webpack-plugin-hash-output": "1.3.1",
+    "webpackbar": "3.1.5"
   },
   "peerDependencies": {
     "@babel/polyfill": "7.2.5",
