--- a/packages/kyt-starter-universal/package.json
+++ b/packages/kyt-starter-universal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kyt-starter-universal",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-alpha.b92c3c7a",
   "description": "",
   "repository": {
     "type": "git",
