--- a/packages/kyt-starter-universal/starter-src/package.json
+++ b/packages/kyt-starter-universal/starter-src/package.json
@@ -32,8 +32,8 @@
     "enzyme-to-json": "3.3.5",
     "kyt": "1.0.0-alpha.f941e0e4",
     "raf": "3.4.1",
-    "react-test-renderer": "16.7.0",
-    "react-hot-loader": "4.6.3"
+    "react-hot-loader": "4.6.3",
+    "react-test-renderer": "16.7.0"
   },
-  "version": "1.0.0-alpha.3"
+  "version": "1.0.0-alpha.b92c3c7a"
 }
