--- a/packages/kyt-utils/package.json
+++ b/packages/kyt-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kyt-utils",
-  "version": "0.1.1",
+  "version": "0.2.0-alpha.b92c3c7a",
   "description": "A shared kyt utility library.",
   "author": "NYTimes",
   "license": "Apache-2.0",
