--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
   },
   "devDependencies": {
     "lerna": "^2.0.0",
-    "eslint-config-kyt": "file:packages/eslint-config-kyt",
-    "eslint-plugin-kyt": "file:packages/eslint-plugin-kyt"
+    "eslint-config-kyt": "file:packages/eslint-config-kyt"
   },
   "dependencies": {}
 }
